--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "bundle/taglist"]
 	path = bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim
+[submodule "bundle/vim-plantuml"]
+	path = bundle/vim-plantuml
+	url = https://github.com/aklt/plantuml-syntax
