--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "bundle/mojo"]
 	path = bundle/mojo
 	url = https://github.com/yko/mojo.vim
+[submodule "bundle/vim-stap"]
+	path = bundle/vim-stap
+	url = https://github.com/schnell18/vim-stap
