--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/vim-go"]
 	path = bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "bundle/vim-docker"]
+	path = bundle/vim-docker
+	url = https://github.com/ekalinin/Dockerfile.vim.git
